--- a/Kris_Branch/index.html
+++ b/Kris_Branch/index.html
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col-xs-12  col-md-9">
                 <div class="article">
-                    <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
+                    <h2>Correlations Discovered Between Total Vaccines Delivered VS Total Vaccines Administered</h2>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
                         mi vitae est. Mauris placerat eleifend leo.</p>
 
@@ -52,7 +52,7 @@
 
     <!-- Footer-->
     <div id="footer">
-        <p>Created by Group 5 circa&copy;2021</p>
+        <p>Created by Group 5 circa &copy; 2021</p>
     </div>
 
 
