--- a/Kris_Branch/index.html
+++ b/Kris_Branch/index.html
@@ -6,6 +6,8 @@
     <title>COVIDTimes</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/d3Style.css">
 
@@ -20,7 +22,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-md-12">
                 <h1>COVIDTimes</h1>
@@ -36,6 +38,7 @@
         <div class="row">
             <div class="col-xs-12  col-md-9">
                 <div class="article">
+
                     <h2>Correlations Discovered Between Total Vaccines Delivered VS Total Vaccines Administered</h2>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
                         mi vitae est. Mauris placerat eleifend leo.</p>
