--- a/in progress plot/index.html
+++ b/in progress plot/index.html
@@ -33,11 +33,10 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="article">
-                    <h2>Correlations Discovered Between Poverty and Healthcare</h2>
-                    <p>The plot above showcases the percentage of each state that lacks healthcare along with how much of the states population is in poverty. Hover over the circles to view the exact percentages.</p>
+                    <h2>States and Cases</h2>
+                    <p>text.</p>
 
-                    <p>The data plotted above shows somewhat of a correlation between lack of healthcare and poverty, given a few outliers. Gor example, Massachusetts' population has the lowest percent that lacks healthcare but its poverty percent is higher
-                        compared to other states such as Maryland. Overall, a steady incline is shown on the graph, making the correlation positive.</p>
+                    <p>text</p>
 
                 </div>
             </div>
