--- a/Mark_Branch/Texas County Map/Code/index.html
+++ b/Mark_Branch/Texas County Map/Code/index.html
@@ -7,6 +7,8 @@
     <title>Texas County COVID-19 Vaccines</title>
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <!-- Boostrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/minty/bootstrap.min.css">
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <!-- JQuery -->
@@ -25,8 +27,47 @@
 <body>
 
     <!-- The div where we will inject our map -->
-    <div id="map"></div>
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Texas COVID Vaccines
+              </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <hr style="color:lightgray; border-width: 3px;">
+    <div class="container">
+        <div class="card border-primary mb-3" style="max-width: 20rem;">
+            <div class="card-header">Filters</div>
+            <div class="card-body">
+                <select id="column">
+                    <option value="Vaccine Doses Administered">Doses Administered</option>
+                    <option value="Total Doses Allocated">Doses Allocated</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <hr style="color:lightgray; border-width: 3px;">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 id="maptitle"></h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12" id="mapcontainer">
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
