--- a/Lollypop chart/index.html
+++ b/Lollypop chart/index.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <h1>COVID CASES</h1>
+                <h1>COVID-19 Cases by State</h1>
             </div>
         </div>
         <div class="row">
@@ -33,10 +33,10 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="article">
-                    <h2>States and Cases</h2>
-                    <p>text.</p>
+                    <!-- <h2>States and Covid Cases</h2> -->
+                    <p></p>
 
-                    <p>text</p>
+                    <p></p>
 
                 </div>
             </div>
@@ -44,9 +44,9 @@
     </div>
 
     <!-- Footer-->
-    <div id="footer">
-        <p>SMU Data Science BootCamp &copy; 2021</p>
-    </div>
+    <!-- <div id="footer">
+        <p>SMU Data Science BootCamp &copy; 2021</p> -->
+    <!-- </div> -->
 </body>
 
 </html>
