--- a/Kris_Branch/index.html
+++ b/Kris_Branch/index.html
@@ -29,7 +29,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-md-12">
-                <h1>COVIDTimes</h1>
+                <h1>United States Vaccine Distribution</h1>
             </div>
         </div>
         <div class="row">
@@ -53,9 +53,7 @@
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
                         mi vitae est. Mauris placerat eleifend leo.</p>
                 </div>
-                <li class="nav-item">
-                    <a class="nav-link" href="data.html" style="color: blue">Filterable Data</a>
-                </li>
+
             </div>
         </div>
     </div>
