--- a/Final_Branch/index.html
+++ b/Final_Branch/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="index.html"><img src="https://t4.ftcdn.net/jpg/02/95/08/79/360_F_295087973_OEp5c42ZxdiYWPhLrkIldyr4ulJyMQGa.jpg" height="50px" width="50px"></a>
+        <a class="navbar-brand" href="index.html"><img src="https://upload.wikimedia.org/wikipedia/commons/8/82/SARS-CoV-2_without_background.png" height="50px" width="50px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,6 +43,7 @@
                 </li>
             </ul>
         </div>
+
     </nav>
 
     <!-- <div class="container-fluid">
