--- a/Main_Branch/index.html
+++ b/Main_Branch/index.html
@@ -21,6 +21,7 @@
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script src="data.js"></script>
+    <script type="text/javascript" src="assets/js/lolly.js"></script>
 
 
 </head>
@@ -33,28 +34,32 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12  col-md-9">
+            <div class="col-xs-12 col-md-9">
                 <div id="scatter">
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12  col-md-9">
+            <div class="col-xs-12 col-md-9">
                 <div class="article">
 
                     <h2>Correlations Discovered Between Total Vaccines Delivered VS Total Vaccines Administered</h2>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
                         mi vitae est. Mauris placerat eleifend leo.</p>
                 </div>
-
             </div>
+
         </div>
     </div>
-
-    <!-- Footer-->
-    <div id="footer">
-        <p>Created by Group 5 circa &copy; 2021</p>
     </div>
+    <div class="row">
+        <div class="col-xs-12 col-md-9">
+            <div id="scatter">
+            </div>
+            <!-- Footer-->
+            <div id="footer">
+                <p>Created by Group 5 circa &copy; 2021</p>
+            </div>
 
 
 </body>
