--- a/Kris_Branch/lollypop.html
+++ b/Kris_Branch/lollypop.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Interactive Scatter Plot</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>COVID Cases Interactive Scatter Plot</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/pulse/bootstrap.min.css">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/d3Style.css">
 
@@ -17,6 +18,37 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">COVID Data</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="welcome.html">Home
+                <span class="sr-only">(current)</span>
+              </a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="index.html">Vaccine Distribution</a>
+                        <a class="dropdown-item" href="lollypop.html">Lollipop Chart</a>
+                        <a class="dropdown-item" href="HEATMAP1/index.html">USA Heatmap</a>
+                        <a class="dropdown-item" href="Texas County Map/Texas.html">TX County Choropleth</a>
+
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -33,8 +65,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="article">
-                    <!-- <h2>States and Covid Cases</h2> -->
-                    <p></p>
+                    <h2>States and Covid Cases</h2>
+                    <p>We wanted to see if there was a relationship between COVID Cases and Vaccine distribution. This chart proves that states with more cases are receiving more vaccines (as shown in the Vaccine Distribution Chart). </p>
 
                     <p></p>
 
