--- a/Kris_Branch/welcome.html
+++ b/Kris_Branch/welcome.html
@@ -44,7 +44,7 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="index.html">Vaccine Distribution</a>
-                        <a class="dropdown-item" href="lollypop.html">Lollypop Chart</a>
+                        <a class="dropdown-item" href="lollypop.html">Lollipop Chart</a>
                         <a class="dropdown-item" href="HEATMAP1/index.html">USA Heatmap</a>
                         <a class="dropdown-item" href="Texas County Map/Texas.html">TX County Choropleth</a>
 
@@ -57,7 +57,31 @@
             </form>
         </div>
     </nav>
-    <!-- <div class="container-fluid">
+
+    <div class="container-fluid">
+        <div class="row" style="margin-top:5%">
+            <div class="col-md-12">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>COVID Cases and Vaccinations</h1>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <img src="assets/image/covid_image.jpg" style="float: none;zoom:1">
+                            <p>With the Coronavirus drastically changing our world over the last year, we wanted to take a look at how The United States has been doing in terms of cases. Now that vaccine distributions are on the rise as well, our goal was
+                                to figure out if there were any correlations between state cases and vaccine distributions.
+                                <p>Our site includes a scatter plot of vaccine distributions and allocations by sttae, a lollipop chart of COVID cases by state, a heatmap of cases for the country, and a Texas choropleth for vaccine distributions by Texas
+                                    counties.
+                                </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-md-12">
                 <h1>United States Vaccine Distribution</h1>
@@ -81,10 +105,10 @@
         </div>
     </div> -->
 
-    <!-- Footer-->
-    <div id="footer">
-        <p>Created by Group 5 circa &copy; 2021</p>
-    </div>
+            <!-- Footer-->
+            <div id="footer">
+                <p>Created by Group 5 circa &copy; 2021</p>
+            </div>
 
 
 </body>
