--- a/Kris_Branch/Texas County Map/Texas.html
+++ b/Kris_Branch/Texas County Map/Texas.html
@@ -8,7 +8,7 @@
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <!-- Boostrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/minty/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/pulse/bootstrap.min.css">
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="/Texas County Map/static/css/style.css">
     <!-- JQuery -->
@@ -27,34 +27,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/index.html"><img src="https://t4.ftcdn.net/jpg/02/95/08/79/360_F_295087973_OEp5c42ZxdiYWPhLrkIldyr4ulJyMQGa.jpg" height="50px" width="50px"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-        <div class="collapse navbar-collapse" id="navbarColor03">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Welcome</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
-                    <div class="dropdown-menu bg-light">
-                        <a class="dropdown-item" href="Texas County Map/Texas.html">Texas</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="comparisons.html">Comparisons</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="data.html">Data</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- The div where we will inject our map -->
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#">COVID Data</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,12 +35,46 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Texas COVID Vaccines
+                    <a class="nav-link" href="../welcome.html">Home
+                <span class="sr-only">(current)</span>
               </a>
                 </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="index.html">Vaccine Distribution</a>
+                        <a class="dropdown-item" href="lollypop.html">Lollipop Chart</a>
+                        <a class="dropdown-item" href="HEATMAP1/index.html">USA Heatmap</a>
+                        <a class="dropdown-item" href="Texas County Map/Texas.html">TX County Choropleth</a>
+
+                    </div>
+                </li>
             </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
     </nav>
+    </nav>
+    <!-- The div where we will inject our map -->
+
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto"> -->
+    <!-- <li class="nav-item active">
+                    <a class="nav-link" href="#">Texas COVID Vaccines
+              </a>
+                </li> -->
+    <!-- </ul>
+        </div>
+    </nav> -->
     <hr style="color:lightgray; border-width: 3px;">
     <div class="container">
         <div class="card border-primary mb-3" style="max-width: 20rem;">
