--- a/Kris_Branch/index.html
+++ b/Kris_Branch/index.html
@@ -43,7 +43,7 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="index.html">Vaccine Distribution</a>
-                            <a class="dropdown-item" href="lollypop.html">Lollypop Chart</a>
+                            <a class="dropdown-item" href="lollypop.html">Lollipop Chart</a>
                             <a class="dropdown-item" href="HEATMAP1/index.html">USA Heatmap</a>
                             <a class="dropdown-item" href="Texas County Map/Texas.html">TX County Choropleth</a>
 
