--- a/Kris_Branch/HEATMAP1/index.html
+++ b/Kris_Branch/HEATMAP1/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>COVID-19 Cases</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/pulse/bootstrap.min.css">
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <!-- Marker Cluster CSS -->
@@ -44,9 +45,9 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="../index.html">Vaccine Distribution</a>
+                        <a class="dropdown-item" href="../scatter.html">Vaccine Distribution</a>
                         <a class="dropdown-item" href="../lollypop.html">Lollipop Chart</a>
-                        <a class="dropdown-item" href="../HEATMAP1/index.html">USA Heatmap</a>
+                        <a class="dropdown-item" href="index.html">USA Heatmap</a>
                         <a class="dropdown-item" href="../Texas County Map/Texas.html">TX County Choropleth</a>
 
                     </div>
@@ -59,7 +60,7 @@
         </div>
     </nav>
     <!-- The div where we will inject our map -->
-    <div id="map"></div>
+    <div id="heatmap"></div>
 </body>
 
 </html>
