--- a/Kris_Branch/lollypop.html
+++ b/Kris_Branch/lollypop.html
@@ -35,7 +35,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="index.html">Vaccine Distribution</a>
+                        <a class="dropdown-item" href="scatter.html">Vaccine Distribution</a>
                         <a class="dropdown-item" href="lollypop.html">Lollipop Chart</a>
                         <a class="dropdown-item" href="HEATMAP1/index.html">USA Heatmap</a>
                         <a class="dropdown-item" href="Texas County Map/Texas.html">TX County Choropleth</a>
