--- a/Juv_Branch/HEATMAP1/index.html
+++ b/Juv_Branch/HEATMAP1/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css">
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Leaflet JS -->
@@ -21,9 +21,9 @@
     <!-- <script src="https://raw.githubusercontent.com/Leaflet/Leaflet.heat/gh-pages/dist/leaflet-heat.js"></script> -->
     <script src="static/js/leaflet-heat.js"></script>
     <!-- API key -->
-    <script type="text/javascript" src="/static/js/config.js"></script>
+    <script type="text/javascript" src="static/js/config.js"></script>
     <!-- JS -->
-    <script type="text/javascript" src="/static/js/heatmap.js"></script>
+    <script type="text/javascript" src="static/js/heatmap.js"></script>
 </head>
 
 <body>
