--- a/Kris_Branch/Texas County Map/Texas.html
+++ b/Kris_Branch/Texas County Map/Texas.html
@@ -10,7 +10,7 @@
     <!-- Boostrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/pulse/bootstrap.min.css">
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="/Texas County Map/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="Texas County Map/static/css/style.css">
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- d3 JavaScript -->
@@ -18,9 +18,9 @@
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <!-- API key -->
-    <script type="text/javascript" src="/Texas County Map/static/js/config.js"></script>
+    <script type="text/javascript" src="Texas County Map/static/js/config.js"></script>
     <!-- JS -->
-    <script type="text/javascript" src="/Texas County Map/static/js/logic.js"></script>
+    <script type="text/javascript" src="Texas County Map/static/js/logic.js"></script>
 
 </head>
 
